increase width of nav-tabs on X Core page to prevent overlap

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -14002,7 +14002,7 @@ hr {
   #page-core .section--core-design .nav-tabs {
     left: 2px;
     margin: 0 auto;
-    max-width: 255px;
+    max-width: 257px;
     position: relative;
   }
 }
