--- a/resources/assets/sass/core.scss
+++ b/resources/assets/sass/core.scss
@@ -378,7 +378,7 @@
                 @include whenLargerThan('large-screen') {
                     left: 2px;
                     margin: 0 auto;
-                    max-width: 255px;
+                    max-width: 257px;
                     position: relative;
                 }
 
